@startuml
entity "Room" as Room {
  room_id: INTEGER <<PK>>
  --
  room_number: TEXT
  price_per_day: REAL
  status: TEXT
}
entity "Client" as Client {
  client_id: INTEGER <<PK>>
  --
  name: TEXT
  phone: TEXT
  email: TEXT
}
entity "User" as User {
  user_id: INTEGER <<PK>>
  --
  username: TEXT
  password: TEXT
  role: TEXT
  client_id: INTEGER <<FK>>
}
entity "Booking" as Booking {
  booking_id: INTEGER <<PK>>
  --
  start_date: TEXT
  end_date: TEXT
  room_id: INTEGER <<FK>>
  client_id: INTEGER <<FK>>
}
Room ||--o{ Booking
Client ||--o{ Booking
Client ||--o| User
@enduml